--- a/TShockPrometheus/TShockPrometheus.csproj
+++ b/TShockPrometheus/TShockPrometheus.csproj
@@ -45,9 +45,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="Prometheus.NetStandard">
+    <Reference Include="prometheus-net">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\Prometheus.NetStandard.dll</HintPath>
+      <HintPath>References\prometheus-net.dll</HintPath>
     </Reference>
     <Reference Include="TerrariaServer, Version=1.3.1.1, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
