--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: setup-msbuild
       uses: microsoft/setup-msbuild@v1
+    - name: NuGet
+      run: nuget restore
     - name: Build
       run: msbuild /p:Configuration=Release
     - name: Upload a Build Artifact
