--- a/TShockPrometheus/TShockPrometheus.csproj
+++ b/TShockPrometheus/TShockPrometheus.csproj
@@ -39,16 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>References\OTAPI.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="prometheus-net">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\prometheus-net.dll</HintPath>
-    </Reference>
+    <PackageReference Include="prometheus-net" Version="1.3.4" />
     <Reference Include="TerrariaServer, Version=1.3.1.1, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>References\TerrariaServer.exe</HintPath>
