--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Get TShock libs
       run: |
         curl -fsSLJo TShock.zip https://github.com/Pryaxis/TShock/releases/download/v4.4.0-pre15/TShock4.4.0_Pre15_Terraria1.4.1.2.zip
-        7z e TShock.zip -o.\lib\ OTAPI.dll TerrariaServer.exe TShockAPI.dll -r
+        7z e TShock.zip -olib\ OTAPI.dll TerrariaServer.exe TShockAPI.dll -r
     - name: Build
       run: msbuild /p:Configuration=Release
     - name: Upload a Build Artifact
