--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,9 @@
-name: .NET
+name: Release
 
 on:
   push:
-    branches: [ main ]
+    tags:
+    - 'v*'
 
 jobs:
   build:
@@ -25,3 +26,26 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         path: TShockPrometheus/bin/**/*
+    - name: Prepare Release Artifact
+      run: |
+        cd /D TShockPrometheus/bin/x86/Release/net462
+        7z a ../../../../../TShockPrometheus_${{ github.ref }}.zip TShockPrometheus.dll System.ValueTuple.dll Prometheus.NetStandard.dll
+        cd ../../../../..
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.1.4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: ${{ github.ref }}
+        draft: true
+    - name: Upload Release Artifacts
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./my-artifact.zip
+        asset_name: my-artifact.zip
+        asset_content_type: application/zip
