--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: olegtarasov/get-tag@v2.1
+      id: tagName
     - name: setup-msbuild
       uses: microsoft/setup-msbuild@v1
     - name: NuGet
@@ -28,9 +30,9 @@ jobs:
         path: TShockPrometheus/bin/**/*
     - name: Prepare Release Artifact
       run: |
-        cd /D TShockPrometheus/bin/x86/Release/net462
-        7z a ../../../../../TShockPrometheus_${{ github.ref }}.zip TShockPrometheus.dll System.ValueTuple.dll Prometheus.NetStandard.dll
-        cd ../../../../..
+        cd TShockPrometheus\bin\x86\Release\net462\
+        7z a ..\..\..\..\..\TShockPrometheus-${{ steps.tagName.outputs.tag }}.zip TShockPrometheus.dll System.ValueTuple.dll Prometheus.NetStandard.dll
+        cd ..\..\..\..\..
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.1.4
@@ -39,13 +41,12 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
-        draft: true
     - name: Upload Release Artifacts
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./my-artifact.zip
-        asset_name: my-artifact.zip
+        asset_path: TShockPrometheus-${{ steps.tagName.outputs.tag }}.zip
+        asset_name: TShockPrometheus-${{ steps.tagName.outputs.tag }}.zip
         asset_content_type: application/zip
