--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,6 @@ name: Build
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
@@ -15,22 +10,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: setup-msbuild
-      uses: microsoft/setup-msbuild@v1
-    - name: NuGet
-      run: nuget restore
-    - name: Get TShock libs
-      run: |
-        curl -fsSLJo TShock.zip https://github.com/Pryaxis/TShock/releases/download/v4.4.0-pre15/TShock4.4.0_Pre15_Terraria1.4.1.2.zip
-        7z e TShock.zip -olib\ OTAPI.dll TerrariaServer.exe TShockAPI.dll -r
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
     - name: Build
-      run: msbuild /p:Configuration=Release
+      run: dotnet build --no-restore -c Release
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.1
       with:
         name: TShockPrometheus
         path: |
-          TShockPrometheus/bin/x86/Release/net462/
-          !TShockPrometheus/bin/x86/Release/net462/OTAPI.dll
-          !TShockPrometheus/bin/x86/Release/net462/TerrariaServer.exe
-          !TShockPrometheus/bin/x86/Release/net462/TShockAPI.dll
+          TShockPrometheus/bin/Release/net6.0/
